--- a/src/app/pages/login/login.page.scss
+++ b/src/app/pages/login/login.page.scss
@@ -35,10 +35,12 @@
         margin-right: 15%;
 
         .input_loginemail{
+            background-color: white;
             width: 100%;
         }
 
-        .input_loginsenha{
+        .input_loginpassword{
+            background-color: white;
             width: 100%;
         }
 
