--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -1,9 +1,44 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>register</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
+
+  <div class="div_main">
+    
+    <br>
+    <h1 class="h1">Miyagi Do</h1>
+
+    <div class="div_img">
+
+      <div class="div_register">
+
+
+
+        <p class="p">Nome</p>
+        <ion-input type="text" name="input_registername" id="input_registername" class="input_registername"
+          [(ngModel)]="userRegister.name"></ion-input>
+
+        <p class="p">Email</p>
+        <ion-input type="email" name="input_registeremail" id="input_registeremail" class="input_registeremail"
+          [(ngModel)]="userRegister.email"></ion-input>
+
+        <p class="p">Senha</p>
+        <ion-input type="password" name="input_registerpassword" id="input_registerpassword"
+          class="input_registerpassword" [(ngModel)]="userRegister.password"></ion-input>
+
+        <p class="p">Confirmar senha</p>
+        <ion-input type="password" name="input_registerconfirmpassword" id="input_registerconfirmpassword"
+          class="input_registerconfirmpassword" [(ngModel)]="userRegister.confirmpassword"></ion-input><br><br>
+
+        <ion-button color="light" shape="round" fill="outline" size="large" expand="block" onclick="register()">
+          Confirmar</ion-button>
+
+
+      </div>
+
+
+
+    </div>
+
+      <ion-footer class="footer_registerpage">Copyright: Eduardo de Jesus. Todos os direitos reservados</ion-footer>
+
+  </div>
 
 </ion-content>
